# Plan_to_A_and_B

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  plan_manager.py  plan_manager_gui.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml  setup-hooks.yml
changelog/: index.html
plan_manager/: __init__.py  main.py
plan_manager/cli/: __init__.py  main.py
plan_manager/core/: __init__.py  manager.py
plan_manager/gui/: __init__.py  app.py
plan_manager/models/: __init__.py  plan.py
plan_manager/utils/: __init__.py  formatters.py
requirements/: base.txt  dev.txt
search/: search_index.json
tools/: commit-msg  generate_changelog.py  pre-commit  version-bump
